index button css sign up

--- a/index.html
+++ b/index.html
@@ -515,7 +515,8 @@
           </div>
           <div class="input-email-footer">
             <h3 class="sign-up">Zapisz się do newslettera</h3>
-            <form name="sign-up-email-form" autocomplete="on">
+    
+            <form  name="sign-up-email-form" autocomplete="on">
               <label for="user-email"></label>
 
               <input
@@ -524,8 +525,27 @@
                 id="user-email"
                 placeholder="E-mail"
               />
-              <button type="submin">Zapisz się</button>
+              <button class="button-email" type="submit">
+                Zapisz się
+                <svg class="svg-sign-up"
+                  version="1.1"
+                  xmlns="http://www.w3.org/2000/svg"
+                  xmlns:xlink="http://www.w3.org/1999/xlink"
+                  xmlns:ev="http://www.w3.org/2001/xml-events"
+                  height="24"
+                  width="24"
+                >
+                  <use
+                    height="24"
+                    width="24"
+                    x="0"
+                    y="0"
+                    href="./images/icons.svg#icon send"
+                  ></use>
+                </svg>
+              </button>
             </form>
+         
           </div>
         </div>
       </div>
