--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
             </div>
           </div>
           <div class="input-email-footer">
-            <h3 class="sign-up">Zapisz się do newslettera</h3>
+            <h3 class="sign-up-newsletter">Zapisz się do newslettera</h3>
     
             <form  name="sign-up-email-form" autocomplete="on">
               <label for="user-email"></label>
