--- a/index.html
+++ b/index.html
@@ -515,10 +515,10 @@
           </div>
           <div class="input-email-footer">
             <h3 class="sign-up-newsletter">Zapisz się do newslettera</h3>
-    
-            <form  name="sign-up-email-form" autocomplete="on">
-              <label for="user-email"></label>
 
+            <form name="user-email-newsletter" autocomplete="on">
+              <label for="user-email"></label>
+              <!-- input zapiz sie do newslettera -->
               <input
                 class="input-email"
                 type="email"
@@ -527,7 +527,8 @@
               />
               <button class="button-email" type="submit">
                 Zapisz się
-                <svg class="svg-sign-up"
+                <svg
+                  class="svg-sign-up"
                   version="1.1"
                   xmlns="http://www.w3.org/2000/svg"
                   xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -540,12 +541,11 @@
                     width="24"
                     x="0"
                     y="0"
-                    href="./images/icons.svg#icon send"
+                    href="./images/icons.svg#icon-send"
                   ></use>
                 </svg>
               </button>
             </form>
-         
           </div>
         </div>
       </div>
