--- a/portfolio.html
+++ b/portfolio.html
@@ -271,7 +271,7 @@
       </section>
     </main>
 
-    <!--stopka strony-->
+    
     <!--stopka strony-->
     <footer class="baground-grey section60">
       <div class="container">
@@ -331,6 +331,39 @@
                 </svg>
               </a>
             </div>
+          </div>
+          <div class="input-email-footer">
+            <h3 class="sign-up-newsletter">Zapisz się do newslettera</h3>
+
+            <form name="user-email-newsletter" autocomplete="on">
+              <label for="user-email"></label>
+              <input
+                class="input-email"
+                type="email"
+                id="user-email"
+                placeholder="E-mail"
+              />
+              <button class="button-email" type="submit">
+                Zapisz się
+                <svg
+                  class="svg-sign-up"
+                  version="1.1"
+                  xmlns="http://www.w3.org/2000/svg"
+                  xmlns:xlink="http://www.w3.org/1999/xlink"
+                  xmlns:ev="http://www.w3.org/2001/xml-events"
+                  height="24"
+                  width="24"
+                >
+                  <use
+                    height="24"
+                    width="24"
+                    x="0"
+                    y="0"
+                    href="./images/icons.svg#icon-send"
+                  ></use>
+                </svg>
+              </button>
+            </form>
           </div>
         </div>
       </div>
