--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
                       <use href="./images/icons.svg#check-box"></use>
                     </svg>
 
-                  <span class="regulamin-font">Oświadczam iż akceptuję</span> <a href="#">Regulamin</a> <span class="regulamin-font">i</span> <a href="#">Politykę Prywatności.</a>
+                  <span class="regulamin-font">   Oświadczam iż akceptuję </span> <a class="regulamin-font-link" href="#">Regulamin</a> <span class="regulamin-font"> i </span> <a class="regulamin-font-link" href="#">Politykę Prywatności.</a>
                 </label>
 
 
