--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
                 <div class="field" role="group" aria-labelledby="telephone-number">
                   <label for="telephone-number">Telefon</label>
                     <div class="svg-relative">
-                      <input type="tel" id="telephone-number"/>
+                      <input class="input-active" type="tel" id="telephone-number"/>
                         <svg class="svg-input" width="13" height="13">
                           <use href="./images/icons.svg#telephone"></use>
                         </svg>
@@ -597,18 +597,18 @@
                 </div>
 
                 
+                <div class="modal-bottom-flex">
+                  <label class="custom-check-box">
+                    <input type="checkbox">
 
-                <label class="custom-check-box">
-                  <input type="checkbox">
+                      <svg width="11" height="8">
+                        <use href="./images/icons.svg#check-box"></use>
+                      </svg>
 
-                    <svg class="svg-check-box" width="11" height="8">
-                      <use href="./images/icons.svg#check-box"></use>
-                    </svg>
-
-                  <span class="regulamin-font">   Oświadczam iż akceptuję </span> <a class="regulamin-font-link" href="#">Regulamin</a> <span class="regulamin-font"> i </span> <a class="regulamin-font-link" href="#">Politykę Prywatności.</a>
-                </label>
-
-
+                    <span class="regulamin-font margin-left">Oświadczam iż akceptuję </span> <a class="regulamin-font-link" href="#">Regulamin</a> <span class="regulamin-font"> i </span> <a class="regulamin-font-link" href="#">Politykę Prywatności.</a>
+                  </label>
+                  <button class="button-modal-submit" type="submit">Wyślij</button>
+              </div>
 
 
           </div>
