--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
                 <div class="field" role="group" aria-labelledby="telephone-number">
                   <label for="telephone-number">Telefon</label>
                     <div class="svg-relative">
-                      <input class="input-active" type="tel" id="telephone-number"/>
+                      <input type="tel" id="telephone-number"/>
                         <svg class="svg-input" width="13" height="13">
                           <use href="./images/icons.svg#telephone"></use>
                         </svg>
