--- a/portfolio.html
+++ b/portfolio.html
@@ -335,7 +335,7 @@
           <div class="input-email-footer">
             <h3 class="sign-up-newsletter">Zapisz się do newslettera</h3>
 
-            <form name="user-email-newsletter" autocomplete="on">
+            <form name="user-email-newsletter" autocomplete="on" method="post">
               <label for="user-email"></label>
               <input
                 class="input-email"
